working on bluetooth connection

--- a/LaxTraker_cleaned.ipynb
+++ b/LaxTraker_cleaned.ipynb
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "id": "3f046ce8",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 3,
    "id": "05d8375a",
    "metadata": {},
    "outputs": [
@@ -1012,14 +1012,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. File Name: 10_reps_pitch_back_Colin_Sensor.csv Number of Reps (x/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
-      "2. File Name: 10_short_stroke_Colins Sensor.csv Number of Reps (x/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
-      "3. File Name: 10OH_10TQ_10SA_5Fk_5BxFk_Colins Sensor.csv Number of Reps (x/z): 30 / 34 Threshold Number (x/z): 4.2 / 4.2\n",
-      "4. File Name: 12_short_stroke_Colins_Sensor.csv Number of Reps (x/z): 12 / 13 Threshold Number (x/z): 4.2 / 4.2\n",
-      "5. File Name: 20_quick_stick_Colins_Sensor.csv Number of Reps (x/z): 20 / 20 Threshold Number (x/z): 4.2 / 4.2\n",
-      "6. File Name: 25_mixed_Colins_Sensor.csv Number of Reps (x/z): 13 / 25 Threshold Number (x/z): 4.2 / 4.2\n",
-      "7. File Name: 25L_25R_25Split_25Throw_split_catch_Colins_Sensor.csv Number of Reps (x/z): 99 / 99 Threshold Number (x/z): 4.2 / 4.2\n",
-      "8. File Name: Random_Quicksticking_Colins_Sensor.csv Number of Reps (x/z): 31 / 31 Threshold Number (x/z): 4.2 / 4.2\n"
+      "1. File Name: 10_reps_pitch_back_Colin_Sensor.csv Number of Reps (x+z/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
+      "2. File Name: 10_short_stroke_Colins Sensor.csv Number of Reps (x+z/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
+      "3. File Name: 10OH_10TQ_10SA_5Fk_5BxFk_Colins Sensor.csv Number of Reps (x+z/z): 30 / 34 Threshold Number (x/z): 4.2 / 4.2\n",
+      "4. File Name: 12_short_stroke_Colins_Sensor.csv Number of Reps (x+z/z): 12 / 13 Threshold Number (x/z): 4.2 / 4.2\n",
+      "5. File Name: 20_quick_stick_Colins_Sensor.csv Number of Reps (x+z/z): 20 / 20 Threshold Number (x/z): 4.2 / 4.2\n",
+      "6. File Name: 25_mixed_Colins_Sensor.csv Number of Reps (x+z/z): 13 / 25 Threshold Number (x/z): 4.2 / 4.2\n",
+      "7. File Name: 25L_25R_25Split_25Throw_split_catch_Colins_Sensor.csv Number of Reps (x+z/z): 99 / 99 Threshold Number (x/z): 4.2 / 4.2\n",
+      "8. File Name: Random_Quicksticking_Colins_Sensor.csv Number of Reps (x+z/z): 31 / 31 Threshold Number (x/z): 4.2 / 4.2\n"
      ]
     }
    ],
