pushing some interactive code

--- a/LaxTraker_cleaned.ipynb
+++ b/LaxTraker_cleaned.ipynb
@@ -1004,22 +1004,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "05d8375a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. File Name: 10_reps_pitch_back_Colin_Sensor.csv Number of Reps (x+z/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
-      "2. File Name: 10_short_stroke_Colins Sensor.csv Number of Reps (x+z/z): 10 / 10 Threshold Number (x/z): 4.2 / 4.2\n",
-      "3. File Name: 10OH_10TQ_10SA_5Fk_5BxFk_Colins Sensor.csv Number of Reps (x+z/z): 30 / 34 Threshold Number (x/z): 4.2 / 4.2\n",
-      "4. File Name: 12_short_stroke_Colins_Sensor.csv Number of Reps (x+z/z): 12 / 13 Threshold Number (x/z): 4.2 / 4.2\n",
-      "5. File Name: 20_quick_stick_Colins_Sensor.csv Number of Reps (x+z/z): 20 / 20 Threshold Number (x/z): 4.2 / 4.2\n",
-      "6. File Name: 25_mixed_Colins_Sensor.csv Number of Reps (x+z/z): 13 / 25 Threshold Number (x/z): 4.2 / 4.2\n",
-      "7. File Name: 25L_25R_25Split_25Throw_split_catch_Colins_Sensor.csv Number of Reps (x+z/z): 99 / 99 Threshold Number (x/z): 4.2 / 4.2\n",
-      "8. File Name: Random_Quicksticking_Colins_Sensor.csv Number of Reps (x+z/z): 31 / 31 Threshold Number (x/z): 4.2 / 4.2\n"
+     "ename": "NameError",
+     "evalue": "name 'laxtrakr_v1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/code/laxtrakr/LaxTraker_cleaned.ipynb Cell 16'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/LaxTraker_cleaned.ipynb#ch0000015vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m1. \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mlaxtrakr_v1(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/10_reps_pitch_back_Colin_Sensor.csv\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mn\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/LaxTraker_cleaned.ipynb#ch0000015vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m2. \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mlaxtrakr_v1(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/10_short_stroke_Colins Sensor.csv\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mn\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/LaxTraker_cleaned.ipynb#ch0000015vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m3. \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mlaxtrakr_v1(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/10OH_10TQ_10SA_5Fk_5BxFk_Colins Sensor.csv\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m4.2\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mn\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'laxtrakr_v1' is not defined"
      ]
     }
    ],
@@ -1032,6 +1029,27 @@
     "print(\"6. \"+laxtrakr_v1(r'/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/25_mixed_Colins_Sensor.csv',4.2,4.2,'n'))\n",
     "print(\"7. \"+laxtrakr_v1(r'/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/25L_25R_25Split_25Throw_split_catch_Colins_Sensor.csv',4.2,4.2,'n'))\n",
     "print(\"8. \"+laxtrakr_v1(r'/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_20/colin_update/Random_Quicksticking_Colins_Sensor.csv',4.2,4.2,'n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c00a6dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'File Name: Colins_Sensor_2022-06-21T16.16.39.554_DE2B712DD4B4_Accelerometer.csv Number of Reps (x+z/z): 356 / 363 Threshold Number (x/z): 4.2 / 4.2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laxtrakr_v1(r'/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/data_6_22/Colins_Sensor_2022-06-21T16.16.39.554_DE2B712DD4B4_Accelerometer.csv',4.2,4.2,'n')"
    ]
   }
  ],
