--- a/live_stream.ipynb
+++ b/live_stream.ipynb
@@ -22,19 +22,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "address = 'C8:4B:AA:97:50:05'\n",
+    "address = 'F6:94:C6:70:F0:D8'\n",
     "\n",
     "device = MetaWear(address)\n",
-    "#device.connect()"
+    "device.connect()\n",
+    "print(\"Connected\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "pattern= LedPattern(repeat_count= Const.LED_REPEAT_INDEFINITELY)\n",
+    "libmetawear.mbl_mw_led_load_preset_pattern(byref(pattern), LedPreset.SOLID)\n",
+    "libmetawear.mbl_mw_led_write_pattern(device.board, byref(pattern), LedColor.GREEN)\n",
+    "libmetawear.mbl_mw_led_play(device.board)\n",
+    "sleep(5.0)\n",
+    "libmetawear.mbl_mw_led_stop_and_clear(device.board)\n",
+    "sleep(1.0)\n",
+    "device.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +95,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000002vscode-remote?line=0'>1</a>\u001b[0m pattern\u001b[39m=\u001b[39m LedPattern(repeat_count\u001b[39m=\u001b[39m Const\u001b[39m.\u001b[39mLED_REPEAT_INDEFINITELY)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000002vscode-remote?line=1'>2</a>\u001b[0m libmetawear\u001b[39m.\u001b[39mmbl_mw_led_load_preset_pattern(byref(pattern), LedPreset\u001b[39m.\u001b[39mSOLID)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000002vscode-remote?line=2'>3</a>\u001b[0m libmetawear\u001b[39m.\u001b[39mmbl_mw_led_write_pattern(device\u001b[39m.\u001b[39mboard, byref(pattern), LedColor\u001b[39m.\u001b[39mGREEN)\n",
+      "\u001b[1;32m/mnt/c/Users/john.neil/Documents/Side Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000003vscode-remote?line=0'>1</a>\u001b[0m pattern\u001b[39m=\u001b[39m LedPattern(repeat_count\u001b[39m=\u001b[39m Const\u001b[39m.\u001b[39mLED_REPEAT_INDEFINITELY)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000003vscode-remote?line=1'>2</a>\u001b[0m libmetawear\u001b[39m.\u001b[39mmbl_mw_led_load_preset_pattern(byref(pattern), LedPreset\u001b[39m.\u001b[39mSOLID)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/john.neil/Documents/Side%20Projects/LaxTrakr/code/laxtrakr/live_stream.ipynb#ch0000003vscode-remote?line=2'>3</a>\u001b[0m libmetawear\u001b[39m.\u001b[39mmbl_mw_led_write_pattern(device\u001b[39m.\u001b[39mboard, byref(pattern), LedColor\u001b[39m.\u001b[39mGREEN)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'LedPattern' is not defined"
      ]
     }
